--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,16 +116,6 @@ nav {
   transform: scale(1.2);
 }
 
-/* .burger div {
-  width: 30px;
-  height: 3px;
-  background-color: #fff;
-  margin: 5px;
-  -webkit-transition: all 0.3s cubic-bezier(0.86, 0.01, 1, 1.01);
-  -o-transition: all 0.3s cubic-bezier(0.86, 0.01, 1, 1.01);
-  transition: all 0.3s cubic-bezier(0.86, 0.01, 1, 1.01);
-} */
-
 .line1,
 .line3 {
   width: 30px;
@@ -936,7 +926,7 @@ span {
 
 /*********** ABOUT *********************************/
 .body-about {
-  background-color: grey;
+  background-color: rgb(202, 202, 202);
 }
 .about-image {
   position: relative;
@@ -1008,11 +998,13 @@ span {
   background-color: #fff;
   padding: 7rem;
   text-align: center;
+  margin-bottom: 10rem;
 }
 
 .abs-h2 {
   font-size: 5rem;
   margin-bottom: 5rem;
+  font-family: "Merienda One", cursive;
 }
 
 .abs-p {
@@ -1029,8 +1021,48 @@ span {
   margin: 0 auto;
 }
 
-.about-footer {
+.about-container {
+  display: flex;
+  width: 95%;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.about-content {
+  width: 80%;
+  background-color: #fff;
+  margin-left: -5rem;
+  z-index: 100;
+  height: 50vh;
+  -webkit-box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
+}
+
+.about-img-half {
+  width: 100%;
+  height: 65vh;
   z-index: -1;
+  background-attachment: unset;
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5rem;
+  text-align: center;
+}
+
+.about-h2 {
+  font-size: 3.5rem;
+  margin-bottom: 4rem;
+  font-family: "Merienda One", cursive;
+}
+
+.about-p {
+  font-size: 1.5rem;
 }
 
 /*********** MENU *********************************/
