--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -151,7 +151,7 @@ nav {
     right: 0px;
     height: 100vh;
     top: 0vh;
-    background-color: rgb(54, 54, 54);
+    background-color: rgb(35, 35, 35);
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
@@ -215,7 +215,7 @@ nav {
 
 .nav-scroll {
   padding: 1.5rem;
-  background-color: rgb(54, 54, 54);
+  background-color: rgb(35, 35, 35);
   -webkit-clip-path: circle(44% at 50% 50%);
   clip-path: circle(44% at 50% 50%);
   -webkit-transition: 0.3s all ease;
@@ -355,6 +355,7 @@ header {
 }
 
 .header-btn {
+  font-family: "Merienda One", cursive;
   display: inline-block;
   color: rgb(32, 32, 32);
   font-weight: 700;
@@ -473,6 +474,7 @@ header {
 }
 
 .boxes-h2 {
+  font-family: "Merienda One", cursive;
   font-size: 3rem;
 }
 
@@ -998,7 +1000,7 @@ span {
   background-color: #fff;
   padding: 7rem;
   text-align: center;
-  margin-bottom: 10rem;
+  margin-bottom: 6.5rem;
 }
 
 .abs-h2 {
@@ -1033,7 +1035,6 @@ span {
   background-color: #fff;
   margin-left: -5rem;
   z-index: 100;
-  height: 50vh;
   -webkit-box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
@@ -1051,7 +1052,7 @@ span {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 5rem;
+  padding: 5rem;
   text-align: center;
 }
 
@@ -1220,6 +1221,7 @@ span {
 }
 
 .image-h2 {
+  font-family: "Merienda One", cursive;
   color: rgb(233, 233, 233);
   font-weight: 700;
   font-size: 5.5rem;
@@ -1289,12 +1291,12 @@ span {
 
 .menu-nav {
   z-index: 150;
-  background-color: rgb(70, 70, 70);
+  background-color: rgb(35, 35, 35);
 }
 
 /* FOOTER MENU */
 footer {
-  background-color: rgb(70, 70, 70);
+  background-color: rgb(35, 35, 35);
   height: 24rem;
   position: relative;
 }
@@ -1483,5 +1485,37 @@ footer {
   .abs-container {
     padding: 2rem;
     width: 80%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .about-p {
+    font-size: 1.5rem;
+  }
+  .about-content {
+    padding: 4rem;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .about-p {
+    font-size: 1.3rem;
+  }
+  .about-h2 {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .about-container {
+    flex-direction: column;
+    width: 100%;
+  }
+  .about-content {
+    margin: -5rem 0 0 0;
+    width: 65%;
+  }
+  .about-p {
+    font-size: 1.5rem;
   }
 }
