--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1335,11 +1335,12 @@ span {
 }
 
 .item-name {
-  font-size: 2.5rem;
+  font-size: 2.4rem;
 }
 
 .item-price {
-  font-size: 2rem;
+  font-size: 2.4rem;
+  font-weight: 700;
 }
 
 .menu-row {
