--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -225,8 +225,8 @@ nav {
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
   transition: 0.3s all ease;
-  position: absolute;
-  right: 10px;
+  /* position: absolute;
+  right: 10px; */
 }
 
 .nav-active {
@@ -286,19 +286,19 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -306,7 +306,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -314,7 +314,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -322,7 +322,7 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -330,13 +330,13 @@ header {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/2.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -408,7 +408,6 @@ header {
 
 #boxes {
   background-color: rgb(235, 235, 222);
-  padding: 2rem 0;
 }
 
 .flex-container {
@@ -429,6 +428,8 @@ header {
   height: 45vh;
   margin: 0 auto;
   width: 100%;
+  -webkit-box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 44px 0px rgba(0, 0, 0, 0.75);
 }
 
 .image-container {
@@ -451,18 +452,19 @@ header {
 }
 
 .image-1 {
-  background-image: url("../img/image00002.jpg");
+  background-image: url("../img/4.png");
   background-size: cover;
+  background-position: center;
 }
 
 .image-2 {
-  background-image: url("../img/image00002.jpg");
+  background-image: url("../img/3.png");
   background-size: cover;
   background-position: bottom;
 }
 
 .image-3 {
-  background-image: url("../img/image00002.jpg");
+  background-image: url("../img/1.png");
   background-size: cover;
   background-position: bottom;
 }
@@ -665,19 +667,19 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/5.png");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/5.png");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/5.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -685,13 +687,13 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/5.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/5.png");
   background-size: cover;
   background-position: center;
 }
@@ -704,19 +706,19 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/6.png");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/6.png");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/6.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -724,13 +726,13 @@ span {
       from(rgba(10, 10, 10, 0.7)),
       to(rgba(12, 12, 12, 0.7))
     ),
-    url("../img/image00002.jpg");
+    url("../img/6.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.7),
       rgba(12, 12, 12, 0.7)
     ),
-    url("../img/image00002.jpg");
+    url("../img/6.png");
   background-size: cover;
   background-position: center;
 }
@@ -968,19 +970,19 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-image: -webkit-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-image: -o-linear-gradient(
       left,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -988,7 +990,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -996,7 +998,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1004,7 +1006,7 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-image: -webkit-gradient(
       linear,
       left top,
@@ -1012,13 +1014,13 @@ span {
       from(rgba(10, 10, 10, 0.849)),
       to(rgba(12, 12, 12, 0.849))
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-image: linear-gradient(
       90deg,
       rgba(10, 10, 10, 0.849),
       rgba(12, 12, 12, 0.849)
     ),
-    url("https://source.unsplash.com/qE1jxYXiwOA");
+    url("../img/4.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1050,7 +1052,7 @@ span {
 }
 
 .abs-img {
-  background-image: url("../img/image00002.jpg");
+  background-image: url("../img/4.png");
   height: 50vh;
   background-size: cover;
   background-position: center;
@@ -1344,6 +1346,7 @@ span {
 
 .item-name {
   font-size: 2.4rem;
+  padding-right: 1rem;
 }
 
 .item-price {
@@ -1516,6 +1519,9 @@ footer {
   }
   #between {
     width: 130%;
+  }
+  nav {
+    background-color: transparent !important;
   }
 }
 
