--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -466,13 +466,13 @@ header {
 }
 
 .image-2 {
-  background-image: url("../img/3.png");
+  background-image: url("../img/avion.jpg");
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
 }
 
 .image-3 {
-  background-image: url("../img/1.png");
+  background-image: url("../img/basta.jpg");
   background-size: cover;
   background-position: bottom;
 }
